Edited wiki page TableOfContents through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1540 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -9,6 +9,7 @@
       * [Binaries Compiled executables]
       * [BuildSystem Building from source]
     * [ScenarioDesign Scenario design]
+      * [ScenarioHealthSystem Health systems]
       * [Monitoring Monitoring systems]
       * [XmlEntoVector Vector-transmission parameters]
       * [ModelInterventions Interventions]
