Edited wiki page TableOfContents through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1544 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -8,10 +8,11 @@
       * [openmalariaTools OpenMalariaTools]
       * [Binaries Compiled executables]
       * [BuildSystem Building from source]
-    * [ScenarioDesign Scenario design]
-      * [ScenarioHealthSystem Health systems]
+    * [ScenarioDesign Scenario design and configuration]
       * [Monitoring Monitoring systems]
-      * [XmlEntoVector Vector-transmission parameters]
+      * [ScenarioHealthSystem Health systems]
+      * [ScenarioTransmission Transmission model]
+        * [XmlEntoVector Vector-transmission]
       * [ModelInterventions Interventions]
     * [OutputFiles Output formats]
     * Tools
