--- a/wiki/ScenarioDesign.wiki
+++ b/wiki/ScenarioDesign.wiki
@@ -108,12 +108,12 @@ As of schema version 24, some further data is included within the `model` elemen
   </weight>
 </human>
 }}}
-The `weight` data is only required for 1-day timestep models; the `availabilityToMosquitoes` data is needed for all models. A graph of the availability data when interpolated (linear interpolation, shown by the blue line, is enabled by default):
+The `weight` data is only required for 1-day timestep models; the `availabilityToMosquitoes` data is needed for all models. Graphs of the availability and weight data with interpolations (linear interpolations, shown by the blue lines, are enabled by default):
 
 <wiki:comment>
 Graphs generated with the `trunk/unittest/AgeGroupInterpolationSuite.py` script.
 </wiki:comment>
-http://openmalaria.googlecode.com/svn/wiki/images/human_avail_mosq_age.png
+http://openmalaria.googlecode.com/svn/wiki/images/human_avail_and_mass_age.png
 
 
 TODO: add some parameterizations
